# gendev

./: README.md  docker-compose.yaml
backend/: Cargo.toml  Dockerfile
backend/data/: bc_streaming_offer.csv  bc_streaming_package.csv
backend/src/: e2e_testing.rs  handlers.rs  logic.rs  main.rs  models.rs
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: theme.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ComparisonGrid.tsx  gameAutoComplete.tsx  home.tsx  teamsAutoComplete.tsx  tournamentAutoComplete.tsx
