[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
bit-set = "0.8.0"
csv = "1.3.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
env_logger = "0.11.6"
log = "0.4.22"
itertools = "0.13.0"
reqwest = { version = "0.12.11", features = ["blocking"] }
